fixed everything on firefox, need to fix things on chrome

--- a/css/style.scss
+++ b/css/style.scss
@@ -84,9 +84,10 @@ h4 {
   color: $white;
   margin: 0 0 0.25rem 0;
   // margin: 0 0 0 0;
-  line-height: 1.75rem;
+  line-height: 1rem;
   text-transform: lowercase;
   letter-spacing: 0.05rem;
+  padding-bottom: 0.25rem;
 }
 
 
@@ -401,6 +402,7 @@ footer, .footer {
 .GIFcontainer, .slidesContainer, .borderclass {
   width: 5rem;
   height: 24rem;
+  min-height: 14rem;
   grid-column: span 8;
   // min-height: 30rem;
   overflow: hidden;
@@ -2471,14 +2473,15 @@ a:active {
 .play-frame {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   column-gap: 2rem;
   row-gap: 2rem;
-  height: 30rem;
+  height: 100%;
   width: 100%;
   background-color: none;
   pointer-events: all;
   transition: all 300ms ease-out;
+  z-index: 9;
   .play-border{
     opacity: 0;
     transition: all 300ms ease-in-out;
@@ -2500,7 +2503,6 @@ a:active {
       conic-gradient(from 180deg at top    var(--b) right var(--b),var(--_g)) 100% 0    / var(--_p),
       conic-gradient(from 0deg   at bottom var(--b) left  var(--b),var(--_g)) 0    100% / var(--_p),
       conic-gradient(from -90deg at bottom var(--b) right var(--b),var(--_g)) 100% 100% / var(--_p);
-      
   }
   .play-border.show{
     opacity: 1;
@@ -2528,13 +2530,19 @@ a:active {
       column-gap: 0.5rem;
     }
   }
+  #play-disabled {
+    pointer-events: none;
+    box-shadow: none;
+    background-color: transparent;
+    border: none;
+  }
   .play-box-container {
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(4, 1fr);  
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     display: grid;
     // position: relative;
-    grid-column: 3/11;
-    grid-row: 1/4;
+    grid-column: 1/13;
+    grid-row: 1/5;
     height: 100%;
     width: 100%;
     color: $white;
@@ -2546,10 +2554,10 @@ a:active {
     .play-box {
       display: grid;
       // position: absolute;
-      grid-column: span 2;
-      grid-row: span 2;  
+      grid-column: 1fr;
+      grid-row: 1fr;  
       background-color: $red;
-      padding: 0.5rem 1rem;
+      padding: 0.75rem 1rem;
       transition: all 300ms ease-out;
       // width: calc(100%/4 - 2rem);
       // height: calc(100%/2 - 2rem);
@@ -2560,12 +2568,19 @@ a:active {
       border: 0.025rem solid $white;
       background-color: $black;
       box-shadow: 0px 0px 25px rgba(13, 13, 13, 0.7);
+      animation: resize 3000ms ease infinite both;
+      width: 100%;
+      height: 100%;
+      overflow-y: scroll;
+
       &:hover {
         box-shadow: 0px 0px 50px rgba(13, 13, 13, 0.5);
       }
       &.expand {
-        grid-column: span 8;
-        grid-row: span 4;  
+        // grid-template-columns: 1fr 8fr 1fr;
+        // grid-template-rows: 1fr 4fr 1fr;      
+        grid-column: 1/9;
+        grid-row: 1/5;  
         height: 100%;
         width: 100%;
         background-color: transparent;
@@ -2574,25 +2589,118 @@ a:active {
         overflow-y: scroll;
         border: none;
         box-shadow: none;
+        background-color: transparent;
+        animation: resize 3000ms ease infinite both;
         &:hover {
           box-shadow: none;
         }
       }
       &.collapse {
-        grid-column: 1/1;
-        grid-row: 1/1; 
+        grid-column: span 1;
+        grid-row: span 1; 
         height: 0;
         width: 0;
-        display: none;
+        // display: none;
         transition: all 300ms ease-out;
         pointer-events: none;
+        box-shadow: none;
+        // background-color: green;
+        padding: 0;
+        border: none;
       }
     }
   }
 }
 
-
-
+.play-box-container:has(.p1-1:hover) {
+  grid-template-columns: 1.75fr 8fr 0fr 0fr 0fr 0.75fr;
+  grid-template-rows: 1.5fr 4fr 0fr 1fr;
+  overflow-y: scroll;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
+.play-box-container:has(.p1-2:hover) {
+  grid-template-columns: 1.5fr 0fr 8fr 0fr 0fr 1.25fr;
+  grid-template-rows: 1.5fr 4fr 0fr 1fr;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
+.play-box-container:has(.p1-3:hover) {
+  grid-template-columns: 1.25fr 0fr 0fr 8fr 0fr 1.5fr;
+  grid-template-rows: 1.5fr 4fr 0fr 1fr;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
+.play-box-container:has(.p1-4:hover) {
+  grid-template-columns: 1fr 0fr 0fr 0fr 8fr 1.75fr;
+  grid-template-rows: 1.5fr 4fr 0fr 1fr;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
+.play-box-container:has(.p2-1:hover) {
+  grid-template-columns: 1.75fr 8fr 0fr 0fr 0fr 1fr;
+  grid-template-rows: 1fr 0fr 4fr 1.5fr;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
+.play-box-container:has(.p2-2:hover) {
+  grid-template-columns: 1.5fr 0fr 8fr 0fr 0fr 1.25fr;
+  grid-template-rows: 1fr 0fr 4fr 1.5fr;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
+.play-box-container:has(.p2-3:hover) {
+  grid-template-columns: 1.25fr 0fr 0fr 8fr 0fr 1.5fr;
+  grid-template-rows: 1fr 0fr 4fr 1.5fr;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
+.play-box-container:has(.p2-4:hover) {
+  grid-template-columns: 1fr 0fr 0fr 0fr 8fr 1.75fr;
+  grid-template-rows: 1fr 0fr 4fr 1.5fr;
+  :not(:hover).play-box {
+    padding: 0;
+    border: none;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+  }
+}
 
 
 
